--- a/#src/scss/taste.scss
+++ b/#src/scss/taste.scss
@@ -19,6 +19,9 @@
     .taste-descr {
         .taste-descr__block {
             display: flex;
+            img {
+                width: 100%;
+            }
             &.invers {
                 img {
                     margin-right: 0;
@@ -63,5 +66,82 @@
         grid-column: 1 span;
         gap: 35px 108px;
         box-shadow: 9px 6px 17px 0px rgba(0, 0, 0, 0.59);
+        .form-body__lable {
+            .choice-select {
+                position: relative;
+                border-bottom: 1px solid #d7d7d7;
+            }
+        }
+    }
+}
+
+.choice-value,
+.choice-list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.choice-value {
+    height: 4rem;
+    font-size: 1.1rem;
+    padding: 1rem;
+    background-color: #FAFCFD;
+    border: 3px solid transparent;
+    transition: .3s ease-in-out;
+    &::-webkit-input-placeholder {
+        color: #333;
+    }
+    &:hover {
+        background-color: #FF908B;
+        cursor: pointer;
+        &::-webkit-input-placeholder {
+            color: #333;
+        }
+    }
+    &:focus,
+    &.open {
+        box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
+        outline: 0;
+        background-color: #FF908B;
+        color: #000;
+        &::-webkit-input-placeholder {
+            color: #000;
+        }
+    }
+}
+
+.choice-list {
+    list-style: none;
+    margin-top: 4rem;
+    box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    max-height: 0;
+    transition: .3s ease-in-out;
+    &.open {
+        max-height: 320px;
+        overflow: auto;
+    }
+    li {
+        position: relative;
+        height: 4rem;
+        background-color: #FAFCFD;
+        padding: 1rem;
+        font-size: 1.1rem;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        transition: background-color .3s;
+        opacity: 1;
+        &:hover {
+            background-color: #FF908B;
+        }
+        &.closed {
+            max-height: 0;
+            overflow: hidden;
+            padding: 0;
+            opacity: 0;
+        }
     }
 }
