--- a/Calarasi/css/style.css
+++ b/Calarasi/css/style.css
@@ -1641,6 +1641,10 @@ textarea {
   display: flex;
 }
 
+.taste .taste-descr .taste-descr__block img {
+  width: 100%;
+}
+
 .taste .taste-descr .taste-descr__block.invers img {
   margin-right: 0;
   -webkit-box-ordinal-group: 2;
@@ -1693,6 +1697,104 @@ textarea {
   gap: 35px 108px;
   -webkit-box-shadow: 9px 6px 17px 0px rgba(0, 0, 0, 0.59);
           box-shadow: 9px 6px 17px 0px rgba(0, 0, 0, 0.59);
+}
+
+.taste-form .taste-form__body .form-body__lable .choice-select {
+  position: relative;
+  border-bottom: 1px solid #d7d7d7;
+}
+
+.choice-value,
+.choice-list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.choice-value {
+  height: 4rem;
+  font-size: 1.1rem;
+  padding: 1rem;
+  background-color: #FAFCFD;
+  border: 3px solid transparent;
+  -webkit-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.choice-value::-webkit-input-placeholder {
+  color: #333;
+}
+
+.choice-value:hover {
+  background-color: #FF908B;
+  cursor: pointer;
+}
+
+.choice-value:hover::-webkit-input-placeholder {
+  color: #333;
+}
+
+.choice-value:focus,
+.choice-value.open {
+  -webkit-box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
+  outline: 0;
+  background-color: #FF908B;
+  color: #000;
+}
+
+.choice-value:focus::-webkit-input-placeholder,
+.choice-value.open::-webkit-input-placeholder {
+  color: #000;
+}
+
+.choice-list {
+  list-style: none;
+  margin-top: 4rem;
+  -webkit-box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  max-height: 0;
+  -webkit-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.choice-list.open {
+  max-height: 320px;
+  overflow: auto;
+}
+
+.choice-list li {
+  position: relative;
+  height: 4rem;
+  background-color: #FAFCFD;
+  padding: 1rem;
+  font-size: 1.1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: background-color .3s;
+  -o-transition: background-color .3s;
+  transition: background-color .3s;
+  opacity: 1;
+}
+
+.choice-list li:hover {
+  background-color: #FF908B;
+}
+
+.choice-list li.closed {
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  opacity: 0;
 }
 
 .header {
